a batch of small improvements and fixes